--- a/Dominando JQuery/2- Manipulando dimensões dinamicamente/css/style.css
+++ b/Dominando JQuery/2- Manipulando dimensões dinamicamente/css/style.css
@@ -10,17 +10,8 @@ html,body{
 }
 
 .box{
-    position: relative;
-    margin-top: 100px;
-    width: 30%;
-    padding-top: 30%;
-    background-color: #ccc;
     display: inline-block;
-}
-.box h2{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
+    padding: 20px;
+    margin: 20px;
+    background-color: #ccc;
 }
