--- a/Dominando JQuery/5 - Eventos dinâmicos e mais conceitos/css/style.css
+++ b/Dominando JQuery/5 - Eventos dinâmicos e mais conceitos/css/style.css
@@ -6,4 +6,24 @@
 
 html,body{
     height: 100%;
+    text-align: center;
 }
+/*Primeira parte da aula*/
+/*.box{
+    width: 50px;
+    height: 50px;
+    background-color: green;
+    display: none;
+    margin-top: 100px;
+
+}
+a{
+    display: block;
+    margin-top: 50px;
+}
+*/
+/*Segunda parte da aula*/
+input{
+    margin-top: 10px;
+}
+
