--- a/Dominando JQuery/14 - Finalizando validação/css/style.css
+++ b/Dominando JQuery/14 - Finalizando validação/css/style.css
@@ -66,6 +66,7 @@ form input[type=text]{
     padding-left: 10px;
     margin-bottom: 20px;
     border: 1px solid #ccc;
+    color: #ccc;
 }
 
 form input[type=submit]{
