--- a/Dominando JQuery/15 - Navegação sem atualizar e API JQuery/css/style.css
+++ b/Dominando JQuery/15 - Navegação sem atualizar e API JQuery/css/style.css
@@ -2,9 +2,34 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+
 }
 
 html, body{
     height: 100%;
 }
+
+nav{
+    text-align: center;
+    padding: 20px 0;
+}
+nav ul{
+    list-style-type: none;
+}
+nav li{
+    display: inline-block;
+    margin: 0 15px;
+    font-size: 17px;
+    text-transform: uppercase;
+}
+nav a{
+    color: black;
+    text-decoration: none;
+}
+
+.container{
+    width: 100%;
+    text-align: center;
+}
+
+.box{display: none;}
