--- a/Dominando JQuery/16 - Animar elementos com base no scrolltop/css/style.css
+++ b/Dominando JQuery/16 - Animar elementos com base no scrolltop/css/style.css
@@ -10,11 +10,18 @@ html, body{
 }
 
 nav{
+    width: 100%;
+    position: fixed;
     text-align: center;
     padding: 20px 0;
+    background: rgb(210, 210, 210);
+    z-index: 1;
 }
 nav ul{
     list-style-type: none;
+}
+nav li:first-child a{
+    border-bottom: 2px solid black;
 }
 nav li{
     display: inline-block;
@@ -28,6 +35,15 @@ nav a{
 }
 
 .container{
+    position: relative;
+    top: 60px;
     width: 100%;
+    height: 100%;
+    padding: 30px 3%;
     text-align: center;
+}
+
+.sessao{
+    height: 100%;
+    padding: 30px 5%;
 }
