--- a/Dominando JQuery/17 - Criando slider do zero responsivo/css/style.css
+++ b/Dominando JQuery/17 - Criando slider do zero responsivo/css/style.css
@@ -35,13 +35,23 @@ nav a{
     text-decoration: none;
 }
 
-.container{
-    height: 100%;
+.slider{
     position: relative;
-    top: 60px;
+    width: 100%;
+    max-width: 900px;
+    height: 80%;
+    max-height: 600px;
+    margin: 0 auto;
+    /*background: #ccc;*/
 }
 
-.section{
-    height: 100%;
-    padding: 30px 5%;
+.slider img{
+    display: none;
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
 }
