--- a/Dominando JQuery/17 - Criando slider do zero responsivo/css/style.css
+++ b/Dominando JQuery/17 - Criando slider do zero responsivo/css/style.css
@@ -9,36 +9,12 @@ html, body{
     height: 100%;
 }
 
-nav{
-    width: 100%;
-    height: 60px;
-    position: fixed;
-    text-align: center;
-    padding: 20px 0;
-    background: rgb(210, 210, 210);
-    z-index: 1;
-}
-nav ul{
-    list-style-type: none;
-}
-nav li:first-child a{
-    border-bottom: 2px solid #333;
-}
-nav li{
-    display: inline-block;
-    margin: 0 15px;
-    font-size: 17px;
-    text-transform: uppercase;
-}
-nav a{
-    color: black;
-    text-decoration: none;
-}
+.clear{ clear: both;}
 
 .slider{
     position: relative;
     width: 100%;
-    max-width: 900px;
+    max-width: 1000px;
     height: 80%;
     max-height: 600px;
     margin: 0 auto;
@@ -54,4 +30,23 @@ nav a{
     left: 50%;
     transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
+}
+
+.bullets-nav{
+    position: absolute;
+    left: 50%;
+    bottom: 25px;
+    z-index: 3;
+    transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+}
+
+.bullets-nav span{
+    width: 16px;
+    height: 16px;
+    border-radius: 8px;
+    float: left;
+    background-color: #ccc;
+    cursor: pointer;
+    margin: 0 20px;
 }
